# cargo-generate-type

./: Cargo.toml  README.md
examples/: iris.def  iris.rs  iris_caps.csv  iris_no_header.rs
src/: column.rs  err.rs  generate_csv.rs  input_args.rs  main.rs  util.rs
src/generate_csv/: mod.rs
