[package]
name = "cargo-generate-type"
version = "0.1.0"
authors = ["Adam Shirey <adam@shirey.ch>"]
edition = "2021"

description = "Cargo subcommand to generate Rust code from and for input data"
readme = "README.md"
homepage = "https://github.com/aeshirey/cargo-generate-type"
repository = "https://github.com/aeshirey/cargo-generate-type"
license = "MIT OR Apache-2.0"
keywords = ["codegen", "csv", "type"]

[dependencies]
clap = { version = "4.0.32", features = ["derive"] }
csv = "1.1.6"
